--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,22 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="app-container">
+  <div class="landing">
+    <%= image_tag("logo.jpg", alt: "logo le huntist") %>
+  </div>
+
+</div>
+
+<div class="text-container">
+  <div class="title">
+    <h3>Coming Soon</h3>
+  </div>
+  <div class="text">
+    <p>
+      The first independent style hunter club sourcing on-demand the finest of your wardrobe. Now and everywhere
+    </p>
+    <h6>- Le Huntist Trademark Owned by Advanced Retail SAS -</h6>
+  </div>
+</div>
+
+
+
+<div style="display: none">test</div>
