--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,105 @@
 // Specific CSS for your home-page
+// Specific CSS for your home-page
+.app-container {
+  width: 100%;
+  height: 60vh;
+}
+
+body {
+  background-color: #faf6e9;
+}
+
+.landing {
+  width: 100%;
+  background-color: #16383a;
+  height: 100%;
+  text-align: center;
+}
+
+.landing img {
+  width: 550px;
+  padding-top: 7%;
+  // width: 500px;
+  // height: 500px;
+}
+
+.text-container {
+  margin-top: 7vh;
+  text-align: center;
+}
+
+.title h3 {
+  color: #16383a;
+  letter-spacing: .2rem;
+  font-family: 'Crimson Text', serif;
+  font-size: 40px;
+  font-weight: 600;
+}
+
+.text {
+  margin-top: 4vh;
+  padding-right: 30vw;
+  padding-left: 30vw;
+}
+
+.text::after {
+  content:'';
+  height:1px;
+  width:20%;
+  background: #16383a;
+  position:absolute;
+  left:calc(50% - 10%);
+  bottom: 2vh;
+}
+
+.text p {
+  text-transform: uppercase;
+
+  letter-spacing: 0.2rem;
+  color: #16383a;
+  font-size: 18px;
+  font-family: 'Crimson Text';
+}
+
+.text h6 {
+  font-family: 'Crimson Text';
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 0.2rem;
+  color: #16383a;
+  padding-top: 4vh;
+}
+
+@media(max-width: 992px) {
+  .landing img {
+    width: 70%;
+    height: 70%;
+    padding-top: unset;
+  }
+
+  .title h3 {
+    font-size: 18px;
+  }
+
+  .text-container {
+    margin-top: unset;
+  }
+
+  .app-container {
+    height: 32vh;
+  }
+
+  .text {
+    margin-top: unset;
+    padding: 2rem;
+  }
+
+  .text p {
+    font-size: 16px;
+  }
+
+  .landing {
+    height: unset;
+  }
+
+}
